# imgproc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  common.cpp  common.h  gsimageadapterbase.cpp  gsimageadapterbase.h  image.cpp  image.h  imageprocessor.cpp  imageprocessor.h
src/algorithms/: algorithm.h  algorithmbase.h  bgrtogray.cpp  bgrtogray.h  binarize.cpp  binarize.h  brightnessadjustment.cpp  brightnessadjustment.h  downsampling.cpp  downsampling.h  drawline.cpp  drawline.h  gsbinarize.cpp  gsbinarize.h  gsfilterwindow.cpp  gsfilterwindow.h  gshistogram.cpp  gshistogram.h  gshistogramequalization.cpp  gshistogramequalization.h  gskernelfilter.cpp  gskernelfilter.h  gsrotate.cpp  gsrotate.h  histogram.cpp  histogram.h  histogramequalization.cpp  histogramequalization.h  kernel.cpp  kernel.h  kernelfilter.cpp  kernelfilter.h  morphologicalfilter.cpp  morphologicalfilter.h  negative.cpp  negative.h  noise.cpp  noise.h  rotate.cpp  rotate.h  (+4 more)
src/bitmap/: bitmapcommon.cpp  bitmapcommon.h  bitmapfile.cpp  bitmapfile.h  bitmapimageadapter.cpp  bitmapimageadapter.h  bitmapreader.cpp  bitmapreader.h  bitmaptypes.h  bitmapwriter.cpp  bitmapwriter.h
tests/: CMakeLists.txt  testbgrtogray.cpp  testbinarize.cpp  testbitmapfile.cpp  testbrightnessadjustment.cpp  testdownsampling.cpp  testdrawline.cpp  testgsbinarize.cpp  testgshistogram.cpp  testgshistogramequalization.cpp  testgskernelfilter.cpp  testgsrotate.cpp  testhistogram.cpp  testhistogramequalization.cpp  testkernelfilter.cpp  testmorphologicalfilter.cpp  testnegative.cpp  testnoise.cpp  testrotate.cpp  testunibrightnessadjustment.cpp  testuninegative.cpp
