include(GoogleTest)
include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(testbitmapfile testbitmapfile.cpp)
target_link_libraries(testbitmapfile gtest imgproc)
gtest_discover_tests(testbitmapfile)

add_executable(testbinarize testbinarize.cpp)
target_link_libraries(testbinarize gtest imgproc)
gtest_discover_tests(testbinarize)

add_executable(testbrightnessadjustment testbrightnessadjustment.cpp)
target_link_libraries(testbrightnessadjustment gtest imgproc)
gtest_discover_tests(testbrightnessadjustment)

add_executable(testhistogram testhistogram.cpp)
target_link_libraries(testhistogram gtest imgproc)
gtest_discover_tests(testhistogram)

add_executable(testhistogramequalization testhistogramequalization.cpp)
target_link_libraries(testhistogramequalization gtest imgproc)
gtest_discover_tests(testhistogramequalization)

add_executable(testrotate testrotate.cpp)
target_link_libraries(testrotate gtest imgproc)
gtest_discover_tests(testrotate)

add_executable(testnegative testnegative.cpp)
target_link_libraries(testnegative gtest imgproc)
gtest_discover_tests(testnegative)

add_executable(testkernelfilter testkernelfilter.cpp)
target_link_libraries(testkernelfilter gtest imgproc)
gtest_discover_tests(testkernelfilter)

add_executable(testdownsampling testdownsampling.cpp)
target_link_libraries(testdownsampling gtest imgproc)
gtest_discover_tests(testdownsampling)

add_executable(testnoise testnoise.cpp)
target_link_libraries(testnoise gtest imgproc)
gtest_discover_tests(testnoise)

add_executable(testbgrtogray testbgrtogray.cpp)
target_link_libraries(testbgrtogray gtest imgproc)
gtest_discover_tests(testbgrtogray)

add_executable(testmorphologicalfilter testmorphologicalfilter.cpp)
target_link_libraries(testmorphologicalfilter gtest imgproc)
gtest_discover_tests(testmorphologicalfilter)

add_executable(testdrawline testdrawline.cpp)
target_link_libraries(testdrawline gtest imgproc)
gtest_discover_tests(testdrawline)
